--- a/viz.ipynb
+++ b/viz.ipynb
@@ -34,14 +34,13 @@
     "image1 = cv2.resize(image1, (img_size[1], img_size[0]))\n",
     "image2 = cv2.resize(image2, (img_size[1], img_size[0]))\n",
     "\n",
-    "image1 = image1.transpose(2, 0, 1).astype(np.float32) / 255.0\n",
-    "image2 = image2.transpose(2, 0, 1).astype(np.float32) / 255.0\n",
+    "image1 = image1.transpose(2, 0, 1).astype(np.float32) \n",
+    "image2 = image2.transpose(2, 0, 1).astype(np.float32) \n",
     "\n",
-    "image1 = 2 * np.expand_dims(image1, axis=0) - 1\n",
-    "image2 = 2 * np.expand_dims(image2, axis=0) - 1\n",
+    "images = np.concatenate([image1, image2], axis=0)\n",
+    "images = np.expand_dims(images, axis=0)\n",
     "\n",
     "sess = rt.InferenceSession(f\"pretrained_models/{model_name}.onnx\")\n",
-    "images = np.concatenate([image1, image2], axis=1)\n",
     "disp = sess.run(None, {\"images\": images})[0].squeeze()\n",
     "plt.imsave(f\"{img_path}/{model_name}.png\", disp, cmap=\"jet\")\n",
     "\n",
